// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog component supports confirmation dialogs 1`] = `
<div
  className="mdc-dialog"
>
  <div
    className="mdc-dialog__container"
  >
    <div
      aria-modal="true"
      className="mdc-dialog__surface"
      role="alertdialog"
    >
      <h2
        className="mdc-dialog__title"
      >
        foo
      </h2>
      <div
        className="mdc-dialog__content"
      >
        <ul>
          <li>
            one
          </li>
          <li>
            two
          </li>
          <li>
            three
          </li>
        </ul>
      </div>
      <div
        className="mdc-dialog__actions"
      >
        <button
          className="mdc-button mdc-dialog__button"
          data-mdc-dialog-action="ok"
          data-mdc-dialog-button-default=""
          type="button"
        >
          <div
            className="mdc-button__ripple"
          />
          <span
            className="mdc-button__label"
          >
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="mdc-dialog__scrim"
  />
</div>
`;

exports[`Dialog component supports confirmation dialogs 2`] = `
<div
  className="mdc-dialog"
>
  <div
    className="mdc-dialog__container"
  >
    <div
      aria-modal="true"
      className="mdc-dialog__surface bar"
      role="alertdialog"
    >
      <h2
        className="mdc-dialog__title"
      >
        foo
      </h2>
      <div
        className="mdc-dialog__content"
      >
        <ol>
          <li>
            one
          </li>
          <li>
            two
          </li>
          <li>
            three
          </li>
        </ol>
      </div>
      <div
        className="mdc-dialog__actions"
      >
        <button
          className="mdc-button mdc-dialog__button"
          data-mdc-dialog-action="cancel"
          data-mdc-dialog-button-default=""
          type="button"
        >
          <div
            className="mdc-button__ripple"
          />
          <span
            className="mdc-button__label"
          >
            Cancel
          </span>
        </button>
        <button
          className="mdc-button mdc-dialog__button"
          data-mdc-dialog-action="ok"
          type="button"
        >
          <div
            className="mdc-button__ripple"
          />
          <span
            className="mdc-button__label"
          >
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="mdc-dialog__scrim"
  />
</div>
`;
